<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hacksassin</string>
    <string name="action_settings">Settings</string>
	<string name="create_profile">Create Profile</string>
	<string name="create_profile_name_hint">Type your name</string>
	<string name="create_btn">Create</string>
	<string name="create_game">Create New Game</string>
	<string name="join_game_btn">Join Existing Game</string>
	<string name="edit_profile_btn">Edit Profile</string>
	<string name="begin_game_text">Tap with all players</string>
	<string name="begin_game_btn">Begin Game</string>
	<string name="target">Target</string>
	<string name="players_remaining">Players Remaining: 0</string>
	<string name="player_kills">Kills: 0</string>
	<string name="join_game_text">Tap game host to join in</string>
	<string name="delete_profile_btn">Delete Profile</string>
	<string name="app_id">283626111768223</string>
	<string name="kill_mode">Activate Kill Mode</string>
	<string name="game_status_btn">Refresh Game Status</string>
	<string name="return_menu_btn">Return to Main Menu</string>
</resources>