<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".CreateProfile" >

    <Button
        android:id="@+id/create_game_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:textColor="@color/white"
        android:layout_above="@+id/join_game_btn"
        android:onClick="onCreateGameBtnClick"
        />
    
	<Button
	    android:id="@+id/join_game_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/join_game_btn" 
	    android:textColor="@color/white"
	    android:layout_above="@+id/edit_profile_btn"
	    android:onClick="onJoinGameBtnClick"
	    />
	   
    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_btn"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>