<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".CreateProfile" >

    <TextView
        android:id="@+id/target_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target"
        android:textSize="@dimen/header_text_size" 
        android:textColor="@color/holo_blue"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/header_margin" />
    
    <TextView
        android:id="@+id/players_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_remaining"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/player_kills" />
    
    <TextView
        android:id="@+id/player_kills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_kills"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
        
    
</RelativeLayout>