<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".CreateProfile" >

    <TextView
        android:id="@+id/create_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_margin"
        android:text="@string/create_profile"
        android:textColor="@color/BrightRedFF0000"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />
    
    <EditText 
        android:id="@+id/enter_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_profile_title"
        android:inputType="text"
        android:hint="@string/create_profile_name_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        />
    
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />
    
    <Button
        android:id="@+id/create_profile_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onCreateProfileBtnClick"
        android:text="@string/create_btn"
        android:textColor="@color/white"
        android:textColorHint="@color/DarkRed580000" />

</RelativeLayout>